# plutus

./: .gitignore
data-generator/: pyproject.toml
data-generator/data_generator/: dtypes.py
data-generator/data_generator/handlers/: __init__.py  accounts.py  banks.py  transactions.py  users.py
data-generator/data_generator/models/: __init__.py  accounts.py  banks.py  common.py  transactions.py  users.py
database/: bq-datawarehouse.sql  bq-populates.sql  bq-staging.sql  cloudsql-app.sql  docker-compose.yml  init.sql
