[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["Bastien B. <bastien.b.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^28.4.1"
sqlalchemy = "^2.0.34"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
